# Graphics

./: .clang-tidy  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
dependencies/: CMakeLists.txt
examples/: CMakeLists.txt
examples/NFDe/: CMakeLists.txt  main.cpp
examples/NFDeChildWindow/: CMakeLists.txt  main.cpp
examples/descriptor_indexing/: CMakeLists.txt  descriptor_indexing.cpp  descriptor_indexing.def  shader.h  shader.slang
examples/imguiDemo/: CMakeLists.txt  main.cpp
examples/imgui_usage/: CMakeLists.txt  imgui_usage.cpp
examples/materialEditor/: CMakeLists.txt  Camera.hpp  DirectionalLight.hpp  Mesh.cpp  Mesh.hpp  RenderMethod.hpp  Renderer.cpp  main.cpp
examples/materialEditor/ressources/: cube.glb  sphere.glb
examples/materialEditor/shaders/: metalShaders.metal  metalSkyboxShaders.metal  skybox.fs  universal3D.vs
examples/mc_cube/: CMakeLists.txt  mc_cube.cpp  mc_cube.slang
examples/multiBuffer/: CMakeLists.txt  multiBuffer.cpp  shader.slang  shader1.slang  shader2.slang  shader3.slang  shader4.slang
examples/offscreenRenderPass/: CMakeLists.txt  main.cpp
examples/offscreenRenderPass/shaders/: texturedSquare.fs  texturedSquare.vs
examples/scop/: AssetLoader.cpp  AssetLoader.hpp  CMakeLists.txt  Camera.hpp  Entity.cpp  Entity.hpp  Light.hpp  Material.cpp  Material.hpp  Mesh.hpp  MeshLoader.cpp  MeshLoader.hpp  Renderer.cpp  Renderer.hpp  Vertex.hpp  globalNewDelete.cpp  scop.cpp  tracy_allocations.cpp
examples/scop/Entity/: Camera.hpp  Entity.hpp  Light.hpp  RenderableEntity.hpp
examples/scop/ObjParser/: ObjParser.cpp  ObjParser.hpp
examples/scop/math/: math.hpp
examples/scop/resources/chess_set/: chess_set.gltf
examples/scop/shaders/: CMakeLists.txt  Light.slang  SceneData.slang  Vertex.slang  common_vertex.slang  flat_color.slang  light.slang  phong_shading.slang  scene_data.slang  scop.slang  scop_shader.h  shared_types.h  textured.slang  textured_cube.slang
examples/texturedSquare/: CMakeLists.txt  main.cpp
examples/texturedSquare/shaders/: texturedSquare.fs  texturedSquare.metal
examples/triangle/: CMakeLists.txt  main.cpp  shader.slang  triangle.cpp
exemples/: CMakeLists.txt  test_fixitures.hpp
exemples/Shaders/Metal/: APISwitch.metal  flatColorCube.metal  fragmentUniform.metal  graphicPipeline.metal  indexedShape.metal  texturedSquare.metal  triangle.metal
exemples/ambiantLight/: CMakeLists.txt  Vertex.hpp  ambiantLight.fs  ambiantLight.metal  ambiantLight.vs  helpers.cpp  helpers.hpp  main.cpp  stb_image.cpp
exemples/camera/: CMakeLists.txt  Vertex.hpp  helpers.cpp  helpers.hpp  main.cpp  texturedCube.vs  texturedCube2.fs  texturedCube2.metal  texturedCube2.vs
exemples/diffuseLight/: CMakeLists.txt  Vertex.hpp  diffuseLight.fs  diffuseLight.metal  diffuseLight.vs  earthObj.hpp  helpers.cpp  helpers.hpp  main.cpp
exemples/diffuseLight/ressources/: Cat.mtl
exemples/flatColorCube/: CMakeLists.txt  Vertex.hpp  flatColorCube.fs  flatColorCube.metal  flatColorCube.vs  main.cpp
exemples/fragmentUniform/: CMakeLists.txt  Vertex.hpp  fragmentUniform.metal  fragmentUniform.vs  main.cpp
exemples/imgui/src/: imgui_draw.cpp
exemples/imguiDemo/: CMakeLists.txt  main.cpp
exemples/indexedShape/: CMakeLists.txt  Vertex.hpp  indexedShape.fs  indexedShape.metal  indexedShape.vs  main.cpp
exemples/materialEditor/: CMakeLists.txt  DirectionalLight.hpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderMethod.cpp  RenderMethod.hpp  Renderer.cpp  Renderer.hpp  main.cpp  shaderShared.hpp
exemples/materialEditor/shaders/: metalShaders.metal  phong1.fs  skybox.vs  universal3D.vs
exemples/materials/: CMakeLists.txt  Light.hpp  main.cpp  material.hpp
exemples/offscreenRenderPass/: CMakeLists.txt  Vertex.hpp  main.cpp  texturedSquare.fs  texturedSquare.metal  triangle.fs  triangle.metal  triangle.vs
exemples/offscreenRenderPass/shaders/: texturedSquare.fs  texturedSquare.metal  vertexShader.vs
exemples/phongLight/: CMakeLists.txt  Vertex.hpp  helpers.cpp  main.cpp
exemples/phongLight/shaders/: phongLight.fs  phongLight.metal  phongLight.vs
exemples/renderer/: AssetLoad.cpp  AssetLoad.hpp  AssetManager.cpp  AssetManager.hpp  BaseTextureRenderMethode.cpp  CMakeLists.txt  Entity.hpp  EntityComponent.hpp  LoadFile.cpp  LoadFile.hpp  MaterialLibrary.cpp  MaterialLibrary.hpp  Mesh.hpp  MeshLibrary.cpp  MeshLibrary.hpp  RenderMethod.cpp  RenderMethod.hpp  RenderMethodLibrary.hpp  RenderableEntity.cpp  Renderer.cpp  Renderer.hpp  ShaderDatas.hpp  ShaderStructs.hpp  TextureLibrary.cpp  TextureLibrary.hpp  Vertex.hpp  imguiWidget.cpp  imguiWidget.hpp  loadFile.cpp  loadFile.hpp  main.cpp
exemples/renderer/ressources/: cat.mtl  cup.mtl
exemples/renderer/shaders/: baseColor.fs  baseTexture.fs  baseTexture.metal  default.fs  default.vs  flatColor.fs  flatColor.metal  lightCompute.metal  lightCompute.metal.h  lightCube.fs  metalShaders.metal  simpleVertex.vs  textured.fs  universal.fs  universal.metal  universal.vs  universal3D.metal  universal3D.vs
exemples/setClearColor/: CMakeLists.txt  main.cpp
exemples/texturedCube/: CMakeLists.txt  Vertex.hpp  main.cpp  texturedCube.fs  texturedCube.metal
exemples/texturedSquare/: CMakeLists.txt  Vertex.hpp  main.cpp
exemples/triangle/: CMakeLists.txt  Vertex.hpp  main.cpp  triangle.fs  triangle.metal  triangle.vs  triangle.vs.glsl
includes/: Graphics.h  (+8 more)
src/imgui/: CMakeLists.txt  imgui.cpp  imgui_demo.cpp  imgui_impl_metal.mm  imgui_tables.cpp  imgui_widgets.cpp
tests/: CMakeLists.txt  Graphics_testCases.cpp  Graphics_testFixitures.hpp  IMockGLFW.cpp  IMockGLFW.hpp  MockClasses.hpp  Vertex.hpp  main.cpp  test_descriptor_operator.cpp  test_fixitures.hpp
tests/MockLibs/: CMakeLists.txt
tests/Shaders/: CMakeLists.txt
tests/Shaders/Metal/: FragmentShaders.metal  VertexShaders.metal  noClearBuffer.metal
tests/Shaders/OpenGL/: fra1.glsl  fra2.glsl  vtx1.glsl  vtx2.glsl
tests/imgui/: CMakeLists.txt
tests/imgui/src/: imgui_impl_opengl2.cpp  imgui_impl_opengl3.cpp  imgui_impl_osx.mm  imgui_internal.h
tools/: CMakeLists.txt  gfxsc.cpp  gfxsc.py
(+285 files in other folders)
